--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ body {
 .header {
     display: flex;
     background-color: #1f2937;
-    padding: 0 140px;
+    padding: 0 36px;
 }
 
 .header #logo {
     padding: 20px;
+    padding-left: 0;
     font-size: 24px;
     font-weight: 600;
     color: #faf9f8;
@@ -35,4 +36,58 @@ body {
     color: #e5e7eb;
     text-decoration: none;
     padding: 20px 10px;
+}
+
+.content-banner {
+    display: flex;
+    align-items: center;
+    background-color: #1f2937;
+    padding: 80px 36px;
+}
+
+.content-banner .entry {
+    display: flex;
+    flex-direction: column;
+}
+
+.content-banner .entry-title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
+.content-banner .entry-body {
+    font-size: 18px;
+    color: #e5e7eb;
+}
+
+.content-banner .entry-link {
+    display: flex;
+}
+
+.content-banner .entry-link a {
+    text-decoration: none;
+    background-color: #3882f6;
+    padding: 8px 24px;
+    margin: 0;
+    margin-top: 12px;
+    border-radius: 8px;
+    font-size: 18px;
+    color: #e5e7eb;
+    font-weight: 700;
+}
+
+.content-banner .banner-image {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 700px;
+    height: 250px;
+    flex: 1 1 auto;
+    background-color: #a5a7ab;
+    margin-left: 12px;
+}
+
+.content-banner span {
+    color: #e5e7eb;
 }
