--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
     font-family: Roboto, sans-serif;
 }
 
+/* Header associated styling */
 .header {
     display: flex;
     background-color: #1f2937;
@@ -38,11 +39,12 @@ body {
     padding: 20px 10px;
 }
 
+/* Banner associated styling */
 .content-banner {
     display: flex;
     align-items: center;
     background-color: #1f2937;
-    padding: 80px 36px;
+    padding: 80px 60px;
 }
 
 .content-banner .entry {
@@ -90,4 +92,69 @@ body {
 
 .content-banner span {
     color: #e5e7eb;
+}
+
+/* Infomation visual associated styling */
+.info-visual {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 60px 96px;
+}
+
+.info-visual .visual-title {
+    font-size: 36px;
+    color: #1f2937;
+    font-weight: bolder;
+}
+
+.info-visual .visual-container {
+    display: flex;
+    justify-content: center;
+}
+
+.info-visual .visual-article {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 180px;
+    margin: 24px;
+    margin-top: 60px;
+}
+
+.info-visual .article-image {
+    width: 174px;
+    height: 174px;
+    border: 6px solid #3882f6;
+    border-radius: 30px;
+    flex: 0 0 auto;
+}
+
+.info-visual .article-text {
+    text-align: center;
+    font-size: 18px;
+    color: #75777b;
+    padding-top: 12px;
+}
+
+/* Quote associated styling */
+.quote {
+    display: flex;
+    flex-direction: column;
+    padding: 60px 96px;
+    background-color: #e5e7eb;
+}
+
+.quote .quote-text {
+    font-size: 36px; 
+    font-weight: lighter;
+    font-style:  italic;
+    color: #1f2937;
+}
+
+.quote .quote-author {
+    text-align: end;
+    font-size: 28px;
+    font-weight: bold;
+    color: #1f2937;
 }
